# fae

./: .gitignore  Cargo.toml  build.rs  bundle.py  changelog.md  code_of_conduct.md  fetch_llvm.py  generate_random_code.py  license.txt  mir_alloc_perf.rs  readme.md  rpn.fae  rustfmt.toml  todo.md
.cargo/: config.toml
.zed/: settings.json
benchmark/: generate.py
benchmark/generated_program/: .gitignore  fae.toml  generated_program.fae
docs/: build_instructions.md  language_reference.md
editor/vscode/: .gitignore  .vscodeignore  LICENSE.md  README.md  language-configuration.json  package.json
example/: example.fae  main.fae  main.poetry
example/a_module/: a.fae  a.poetry  b.fae  b.poetry
example/folder/: module.fae
example/module/: a.poetry
example/sub_folder/: sub_module.fae
examples/cat/: cat.fae  fae.toml
examples/guess_the_number/: fae.toml  guess_the_number.fae
examples/hello_world/: fae.toml  hello_world.fae
examples/list_iteration/: fae.toml  list_iteration.fae
examples/pets/: fae.toml  pets.fae
examples/print_file/: fae.toml  print_file.fae
lib/fae/: format_string.fae  intrinsics.fae  libc.fae  math.fae  memory.fae  prelude.fae  runtime.fae  start.fae  stdout.fae
meta/: benchmark_validator.py  bundle.py  bundle_license.txt  dependency_licenses.py  fetch_llvm.py
src/: c_codegen.rs  clean.rs  cli.rs  cli_arguments.rs  color.rs  error.rs  file.rs  file_list.rs  file_walker.rs  function_store.rs  ice.rs  initial_output.c  ir.rs  location.rs  lock.rs  main.rs  mir.rs  multi_line_string.rs  parser.rs  path_utils.rs  project.rs  reference.rs  span.rs  ssa.rs  test.rs  thread.rs  tokenizer.rs  tracy.rs  tree.rs  type_store.rs  validator.rs  version.rs
src/codegen/: classification.rs  codegen.rs  generator.rs  intermediate.rs  ir.rs  literal.rs  memory_slot.rs  mod.rs  optimization.rs  ssa.rs
src/frontend/: error.rs  file.rs  function_store.rs  ir.rs  lang_items.rs  mod.rs  parser.rs  project.rs  root_layers.rs  span.rs  symbols.rs  tokenizer.rs  tree.rs  type_store.rs  validator.rs  when.rs  yield_targets.rs
tests/alignment_of/: alignment_of.fae  stdout.txt
tests/any_collapse_binary_operation/: any_collapse_binary_operation.fae  error.txt
tests/any_collapse_is/: any_collapse_is.fae  error.txt
tests/any_collapse_untyped_integer/: any_collapse_untyped_integer.fae  error.txt
tests/array_bounds_check/: array_bounds_check.fae  stderr.txt
tests/array_length_get/: array_length_get.fae
tests/array_literal_comments_newlines/: array_literal_comments_newlines.fae  stdout.txt
tests/array_literal_failure/: array_literal_failure.fae  error.txt
tests/array_literal_success/: array_literal_success.fae
tests/array_of_unknown_type/: array_of_unknown_type.fae  error.txt
tests/array_of_zero_sized_failure/: array_of_zero_sized_failure.fae  stderr.txt
tests/array_of_zero_sized_success/: array_of_zero_sized_success.fae
tests/array_pointer_get/: array_pointer_get.fae
tests/array_range_end_out_of_bounds/: array_range_end_out_of_bounds.fae  stderr.txt
tests/array_range_inverted/: array_range_inverted.fae  stderr.txt
tests/array_range_start_negative/: array_range_start_negative.fae  stderr.txt
tests/array_slice_failure/: array_slice_failure.fae  error.txt
tests/array_slice_literal_comments_newlines/: array_slice_literal_comments_newlines.fae  stdout.txt
tests/array_slice_success/: array_slice_success.fae  stdout.txt
tests/array_slice_type_infer_failure/: array_slice_type_infer_failure.fae  error.txt
tests/array_slice_type_infer_success/: array_slice_type_infer_success.fae
tests/array_type_infer_failure/: error.txt  (+1 more)
(+489 files in other folders)
