[package]
name = "fae"
version = "0.1.0"
edition = "2021"

[features]
default = [
	"upstream-parking-lot",
	#"measure-lock-contention",
	#"duplicate-lock-checking",
]
bundled = []
upstream-parking-lot = ["dep:parking_lot_upstream"]
measure-lock-contention = ["dep:parking_lot_contention"]
duplicate-lock-checking = []

[profile.release]
debug = true

[dependencies]
rustc-hash = "1.1.0"
parking_lot_contention = { path = "../parking_lot", package = "parking_lot", optional = true }
parking_lot_upstream = { version = "0.12.3", package = "parking_lot", optional = true }
bumpalo = { version = "3.16.0", features = ["collections"] }
bumpalo-herd = "0.1.2"
llvm-sys = { version = "181.0.0", features = ["no-llvm-linking"] }
unicode-width = "0.1.12"
toml = "0.8.12"
serde = { version = "1.0.145", features = ["derive"] }
rand = "0.8.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"
