[package]
name = "fae"
version = "0.0.1"
edition = "2021"
rust-version = "1.81.0"

[features]
default = [
	"upstream-parking-lot",
	#"measure-lock-contention",
	#"duplicate-lock-checking",
	#"tracy-profile",
	#"tracy-profile-zones",
]
bundled = []
upstream-parking-lot = ["dep:parking_lot_upstream"]
measure-lock-contention = ["dep:parking_lot_contention"]
duplicate-lock-checking = []
tracy-profile = ["dep:tracy-client"]
tracy-profile-zones = ["tracy-profile"]

[profile.release]
debug = true

[profile.bundled]
inherits = "release"
debug = false

[dependencies]
rustc-hash = "2.0.0"
parking_lot_upstream = { version = "0.12.3", package = "parking_lot", optional = true }
parking_lot_contention = { git = "https://github.com/ForLoveOfCats/parking_lot.git", branch = "contention-statistics", package = "parking_lot", optional = true }
bumpalo = { version = "3.16.0", features = ["collections"] }
bumpalo-herd = "0.1.2"
llvm-sys = { version = "191.0.0", features = ["no-llvm-linking"] }
rust_decimal = { version = "1.36.0", default-features = false }
rust_decimal_macros = "1.36.0"
unicode-width = "0.1.12"
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
git-version = "0.3.9"
tracy-client = { version = "0.18.3", features = ["manual-lifetime"], optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
